# haskell-web

./: Dockerfile  README.md  dockerfile
scotty-app/: .gitignore  Dockerfile  app.cabal  practica2.hs
scotty-app/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
scotty-app/dist-newstyle/tmp/src-245270/hsc2hs-0.68.10/: hsc2hs.cabal
scotty-app/posts/: post1.md  post2.md  post3.md  welcome.md
scotty-app/scripts/: quiz.js
scotty-app/src/: Main.hs
scotty-app/static/: blogs.css  style.css
scotty-app/templates/: index.html  quiz.html
