cabal-version:      2.4
name:               scotty-app
version:            0.1.0.0
description:        A simple Scotty web app

executable scotty-app
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base       >= 4.7 && < 5,
        scotty     >= 0.12,
        text       >= 1.2,
        aeson      >= 2.0,
        wai        >= 3.2,
        warp       >= 3.3