cabal-version:      2.4
name:               scotty-site
version:            0.1.0.0
description:        Ana's Corner — Scotty website with blog

executable scotty-site
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base                  >= 4.7 && < 5,
        scotty                >= 0.12,
        text                  >= 1.2,
        aeson                 >= 2.0,
        warp                  >= 3.3,
        wai-middleware-static >= 0.8,
        directory             >= 1.3,
        filepath              >= 1.4